change url index in base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
                     <span class="nav_logo-name">LOGONAME</span>
                 </a>
                 <div class="nav_list">
-                    <a href="{{ url_for('index') }}" class="nav_link">
+                    <a href="{{ url_for('initialFunc') }}" class="nav_link">
                         <span class="material-icons-round nav_icon">grid_view</span>
                         <span class="nav_name">Dashboard</span>
                     </a>
