--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,9 @@
         <div class="header_content">
             <h1>Food Delivery Order Dispatching System</h1>
         </div>
+        <div class="header_img">
+            <img src="" alt="">
+        </div>
     </header>
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
