--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
             <div>
                 <a href="#" class="nav_logo">
                     <i class='bx bx-layer nav_logo-icon'></i>
-                    <span class="nav_logo-name">LOGONAME</span>
+                    <span class="nav_logo-name">Food Delivery System</span>
                 </a>
                 <div class="nav_list">
                     <a href="{{ url_for('initialFunc') }}" class="nav_link">
