--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,8 +40,8 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo">
-                    <i class='bx bx-layer nav_logo-icon'></i>
+                <a href="{{ url_for('initialFunc') }}" class="nav_logo">
+                    <span class="material-symbols-rounded">motorcycle</span>
                     <span class="nav_logo-name">Food Delivery System</span>
                 </a>
                 <div class="nav_list">
