--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,7 +41,7 @@
         <nav class="nav">
             <div>
                 <a href="{{ url_for('initialFunc') }}" class="nav_logo">
-                    <span class="material-symbols-rounded">motorcycle</span>
+                    <span class="material-symbols-rounded nav_icon">motorcycle</span>
                     <span class="nav_logo-name">Food Delivery System</span>
                 </a>
                 <div class="nav_list">
